terraform_modules/eks-cluster/deployment_templates/alb-ingress-controller/external-dns.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.9
        args:
          - --source=ingress
          - --domain-filter=${cluster_domain} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
          - --provider=aws
          - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
          - --registry=txt
          - --txt-owner-id=CreatedByExternalDNS
